# ollama-rust-android

./: .gitignore  Cargo.toml  DEVELOPMENT_LOG.txt  README.md  gradlew  install.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app.js  index.html  marked.min.js  settings.html  setup.html  style.css
app/src/main/java/com/ollamarust/: BootReceiver.kt  MainActivity.kt  OllamaApp.kt  OllamaInstaller.kt  OllamaRunner.kt  OllamaService.kt  OnboardingActivity.kt  ProotExecutor.kt  SettingsActivity.kt  SetupActivity.kt  TermuxBootstrap.kt  TermuxHelper.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/: app.rs  lib.rs  main.rs
