[package]
name = "ollama-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Standard Leptos Stack
leptos = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

# Serialization & WASM
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Storage",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "TouchEvent",
    "MouseEvent",
    "KeyboardEvent",
] }

# Networking & Utilities
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec", "io"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Markdown rendering
pulldown-cmark = "0.10"

# Backend logic
axum = { version = "0.7", features = ["macros"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "ollama-rust"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "public/style.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
bin-features = ["ssr"]
lib-features = ["hydrate"]
